[package]
name = "blkreader"
version = "0.1.0"
edition = "2021"
authors = ["SF-Zhou"]
description = "Read file data directly from block device using extent information"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SF-Zhou/blkreader"
documentation = "https://docs.rs/blkreader"
readme = "README.md"
keywords = ["filesystem", "block-device", "direct-io", "extent", "fiemap"]
categories = ["filesystem", "os::linux-apis"]

[lib]
name = "blkreader"
path = "src/lib.rs"

[[bin]]
name = "blkreader"
path = "src/bin/blkreader.rs"

[dependencies]
blkpath = "0.1"
blkmap = "0.1"
libc = "0.2"
once_cell = "1.19"
clap = { version = "4.5", features = ["derive"] }
sudo = "0.6"

[dev-dependencies]
tempfile = "3.14"
